# conversation-corpus-engine

./: AGENTS.md  CLAUDE.md  DISCOVERY.md  GEMINI.md  README.md  inquiry-log.yaml  pyproject.toml  seed.yaml  value-repos.json
.claude/plans/: irf-cce-039-commercial-implementation-plan.md
.github/workflows/: ci.yml  release.yml
docs/commercial/h1/: conversation-corpus--surfaces-repo-brief.md  irf-cce-033-h1-completion-plan.md  launch-posts.md
docs/commercial/h1/landing-page/: index.html  thanks.html
docs/evaluation/: omega-evidence-map.md
docs/ratification/: omega-evidence-map.md
docs/superpowers/specs/: 2026-03-31-cce-commercial-architecture-design.md  2026-03-31-cce-commercial-architecture-expansion.md
playbooks/handoffs/: gh-14-omega-ratification.md  gh-16-chatgpt-projects-endpoint.md
scripts/: claude_code_to_bundle.py  codex_to_bundle.py  refresh_local_sessions.sh
src/conversation_corpus_engine/: chatgpt_local_session.py  cli.py  commercial_architecture.py  import_chatgpt_local_session_corpus.py  mcp_server.py  paths.py  persona_extract.py  schema_validation.py  source_policy.py  surface_exports.py  triage.py
src/conversation_corpus_engine/schemas/: commercial-awareness.schema.json  commercial-h1-readiness.schema.json  mcp-context.schema.json  surface-manifest.schema.json
state/testaments/: s38-testament.json  s39-testament.json  s40-testament.json  s41-testament.json
tests/: test_answering.py  test_chatgpt_local_session.py  test_claude_code_to_bundle.py  test_claude_local_session.py  test_cli.py  test_commercial_architecture.py  test_federated_canon.py  test_import_chatgpt_local_session_corpus.py  test_import_claude_local_session_corpus.py  test_mcp_server.py  test_persona_extract.py  test_provider_catalog.py  test_schema_validation.py  test_source_lifecycle.py  test_surface_exports.py  test_triage.py  test_workspace_inventory.py
