[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conversation-corpus-engine"
version = "0.3.0"
description = "Canonical corpus and federation engine for multi-provider AI conversation memory."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.urls]
Repository = "https://github.com/organvm-i-theoria/conversation-corpus-engine"

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "ruff>=0.4"]

[project.scripts]
cce = "conversation_corpus_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
conversation_corpus_engine = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "PTH", "RET", "SIM", "COM", "PL"]
ignore = [
    "COM812",
    "E501",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
]
