[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conversation-corpus-engine"
version = "0.3.0"
description = "Canonical corpus and federation engine for multi-provider AI conversation memory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "corpus", "federation", "mcp", "memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Indexing",
]
dependencies = []

[project.urls]
Repository = "https://github.com/organvm-i-theoria/conversation-corpus-engine"
Issues = "https://github.com/organvm-i-theoria/conversation-corpus-engine/issues"

[project.optional-dependencies]
# Pin CI-executed dev tooling to the known-good versions recorded in uv.lock. CI installs
# via `pip install -e ".[dev]"` (which ignores the lockfile), so unpinned ranges
# let pip pull whatever pytest/ruff is newest at run time. A newer ruff with
# formatter or lint-rule changes silently breaks `ruff check` / `ruff format --check`
# on every PR even though no source changed. Pinning keeps CI reproducible; bump
# these deliberately.
dev = ["pytest==9.0.3", "ruff==0.15.8", "mypy>=1.10.0"]
mcp = []

[project.scripts]
cce = "conversation_corpus_engine.cli:main"
cce-mcp = "conversation_corpus_engine.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
conversation_corpus_engine = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "PTH", "RET", "SIM", "COM", "PL"]
ignore = [
    "COM812",
    "E501",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "src/conversation_corpus_engine/answering\\.py",
    "src/conversation_corpus_engine/cli\\.py",
    "src/conversation_corpus_engine/corpus_candidates\\.py",
    "src/conversation_corpus_engine/evaluation\\.py",
    "src/conversation_corpus_engine/federated_canon\\.py",
    "src/conversation_corpus_engine/federation\\.py",
    "src/conversation_corpus_engine/governance_policy\\.py",
    "src/conversation_corpus_engine/import_chatgpt_export_corpus\\.py",
    "src/conversation_corpus_engine/import_claude_export_corpus\\.py",
    "src/conversation_corpus_engine/mcp_server\\.py",
    "src/conversation_corpus_engine/surface_exports\\.py",
    "src/conversation_corpus_engine/triage\\.py",
    "tests"
]
